--- a/Django/django-practice/login/requirements.txt
+++ b/Django/django-practice/login/requirements.txt
@@ -16,6 +16,7 @@ mypy-extensions==0.4.3
 parso==0.8.3
 pathspec==0.10.1
 pickleshare==0.7.5
+Pillow==9.2.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.31
 pure-eval==0.2.2
