--- a/Django/django-practice/login/requirements.txt
+++ b/Django/django-practice/login/requirements.txt
@@ -6,8 +6,10 @@ click==8.1.3
 colorama==0.4.5
 decorator==5.1.1
 Django==3.2.13
+django-appconf==1.0.5
 django-bootstrap5==22.1
 django-extensions==3.2.1
+django-imagekit==4.1.0
 executing==1.1.1
 ipython==8.5.0
 jedi==0.18.1
@@ -16,6 +18,7 @@ mypy-extensions==0.4.3
 parso==0.8.3
 pathspec==0.10.1
 pickleshare==0.7.5
+pilkit==2.0
 Pillow==9.2.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.31
