.DS_Store removed

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ secrets.json
 # Created by https://www.toptal.com/developers/gitignore/api/venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=venv
 
+.DS_Store
+
 ### venv ###
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
